--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/config/dev.json
-    - assets/config/staging.json
-    - assets/config/prod.json
+    - assest/config/dev.json
+    - assest/config/staging.json
+    - assest/config/prod.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
